<resources>
    <string name="app_name">EMWaver</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">EMWaver</string>
    <string-array name="modulations">
        <item>Select a modulation</item>
        <item>ASK</item>
        <item>FSK</item>
    </string-array>
    <string-array name="preambles">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>24</item>
    </string-array>
    <string-array name="sync_modes">
        <item>No preamble/sync word</item>
        <item>15/16 bits</item>
        <item>16/16 bits</item>
        <item>30/32 bits</item>
        <item>No preamble/sync + carrier sense above threshold</item>
        <item>15/16 + carrier sense above threshold</item>
        <item>16/16 + carrier sense above threshold</item>
        <item>30/32 + carrier sense above threshold</item>
    </string-array>
    <string name="device_status">Hold the flash button on the IR Waver and connect the device.\nOnce completed, grant permission to access de STM32 BOOTLOADER device.</string>
    <string-array name="modulation_formats">
        <item>FSK</item>
        <item>ASK/OOK</item>
    </string-array>
    <string-array name="cc1101_modulation_formats">
        <item>2-FSK</item>
        <item>GFSK</item>
        <item>ASK/OOK</item>
        <item>4-FSK</item>
        <item>MSK</item>
    </string-array>
    <string-array name="tx_power_levels">
        <item>-30 dBm</item>
        <item>-20 dBm</item>
        <item>-15 dBm</item>
        <item>-10 dBm</item>
        <item>0 dBm</item>
        <item>5 dBm</item>
        <item>7 dBm</item>
        <item>10 dBm</item>
    </string-array>
    <string-array name="pin_options">
        <item>Pin: GPIO0</item>
        <item>Pin: GPIO2</item>
        <item>Pin: GPIO4</item>
        <item>Pin: GPIO5</item>
        <item>Pin: GPIO12</item>
        <item>Pin: GPIO13</item>
        <item>Pin: GPIO14</item>
        <item>Pin: GPIO15</item>
    </string-array>

    <string-array name="auth_modes">
        <item>Key A</item>
        <item>Key B</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="login_title">Sign in</string>
    <string name="login_description">Use your Continuous account to access EMWaver.</string>
    <string name="login_email_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_error_missing_fields">Enter both email and password to continue.</string>
    <string name="login_logo_content_description">Continuous Society logo</string>
    <string name="login_error_generic">Unable to log in. Please try again.</string>
    <string name="login_create_account_button">Create an account</string>
    <string name="register_title">Create account</string>
    <string name="register_description">Sign up with your email to start using EMWaver. Add your purchase code now or later to unlock Pro access.</string>
    <string name="register_email_hint">Email address</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_access_code_hint">Purchase code (optional)</string>
    <string name="register_access_code_helper">Redeem your EMWaver purchase code now or add it later from settings.</string>
    <string name="register_first_name_hint">First name (optional)</string>
    <string name="register_last_name_hint">Last name (optional)</string>
    <string name="register_button">Create account</string>
    <string name="register_error_missing_fields">Email, username, and password are required.</string>
    <string name="register_error_generic">Unable to create account. Please try again.</string>
    <string name="register_have_account">Already have an account? Sign in</string>
</resources>
